temp fix for stores on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+$text-color:       #eee;
 $background-color: #dedede;
 $brand-color:      #580905; //red
 
@@ -26,8 +26,9 @@ $grey-color-dark:  darken($grey-color, 25%);
 // Width of the content area
 $content-width:    800px;
 
-$on-palm:          600px;
-$on-laptop:        800px;
+$on-palm:          625px;
+$on-ipad:          700px;
+$on-laptop:        900px;
 
 
 
@@ -50,8 +51,9 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "header",
         "home",
+        "contact",
+        "header",
         "footer",
         "syntax-highlighting"
 ;
